# chess-engine

./: Cargo.toml
benches/: flip_bitboard_horizontal_benchmark.rs
src/: bitboard.rs  lib.rs  main.rs  player.rs  rendering.rs
