[package]
name = "chess-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
quad-svg = { git = "https://github.com/freddycansic/quad-svg" } # until he merges my PR
resvg = "0.33.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "flip_bitboard_horizontal_benchmark"
harness = false